--- a/index.html
+++ b/index.html
@@ -76,13 +76,12 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
 
             <div class="cart">
-                <img src="./img/combo-kem-chong-nang-kem-nen-kem-ma_sp2x.png" alt="">
+                <img src="./img/combo-sua-tam-duong-the-hoa-buoi-bia-1_sp2x.png" alt="">
                 <h1 class="cart--title">2</h1>
                 <p class="cart--desc">Mô tả ngắn không quá 100 ký tự</p>
                 <h2 class="cart--price">120.000 vnđ</h2>
@@ -94,13 +93,12 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
 
             <div class="cart">
-                <img src="./img/combo-kem-chong-nang-kem-nen-kem-ma_sp2x.png" alt="">
+                <img src="./img/kem-duong-am-to-tam_sp2x.jpg" alt="">
                 <h1 class="cart--title">3</h1>
                 <p class="cart--desc">Mô tả ngắn không quá 100 ký tự</p>
                 <h2 class="cart--price">120.000 vnđ</h2>
@@ -112,12 +110,11 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
             <div class="cart">
-                <img src="./img/combo-kem-chong-nang-kem-nen-kem-ma_sp2x.png" alt="">
+                <img src="./img/mat-na-ngu-moi-son-duong-moi-bia_75_sp2x.jpg" alt="">
                 <h1 class="cart--title">4</h1>
                 <p class="cart--desc">Mô tả ngắn không quá 100 ký tự</p>
                 <h2 class="cart--price">120.000 vnđ</h2>
@@ -129,12 +126,11 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
             <div class="cart">
-                <img src="./img/combo-kem-chong-nang-kem-nen-kem-ma_sp2x.png" alt="">
+                <img src="./img/nuoc-tay-trang-rau-ma-cho-da-dau-mun_sp2x.jpg" alt="">
                 <h1 class="cart--title">5</h1>
                 <p class="cart--desc">Mô tả ngắn không quá 100 ký tự</p>
                 <h2 class="cart--price">120.000 vnđ</h2>
@@ -146,9 +142,8 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
             <div class="cart">
                 <img src="./img/combo-kem-chong-nang-kem-nen-kem-ma_sp2x.png" alt="">
@@ -163,9 +158,8 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
 
             <div class="cart">
@@ -181,9 +175,8 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
 
             <div class="cart">
@@ -199,9 +192,8 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
 
             <div class="cart">
@@ -217,9 +209,8 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
-                </p>
+                    Còn hàng
+                 </p>
             </div>
 
             <div class="cart">
@@ -235,11 +226,12 @@
                     <i class="far fa-star"></i>
                 </p>
                 <p class="cart--line">
-                    <label for="">&nbsp;</label>
-                    <input type="range" id="vol" name="vol" min="0" max="50"> cỏn hàng
+                   Còn hàng
                 </p>
             </div>
         </div>
+        <button class="btn prew" onclick="prev()"><i class="fas fa-angle-left"></i></button>
+        <button class="btn next" onclick="next()"><i class="fas fa-angle-right"></i></button>
     </div>
     <!-- ==================brand================= -->
     <div class="container">
